# telldus-live-mobile

./: .gitignore  .gitmodules  CMakeLists.txt  abstractfiltereddevicemodel.h  client.cpp  client.h  device.cpp  device.h  devicemodel.cpp  devicemodel.h  favoritemodel.cpp  favoritemodel.h  filtereddevicemodel.cpp  filtereddevicemodel.h  groupdevicemodel.h  main.cpp  resources.qrc  schedulermodel.cpp  schedulermodel.h  sensor.cpp  sensor.h  sensormodel.cpp  tellduscenter.cpp  tellduscenter.h  tellduscenterlight.desktop  tellduscenterlight.pro  tellduslive.cpp  tellduslive.h  tlistmodel.cpp  tlistmodel.h
android/: AndroidManifest.xml
android/res/values/: libs.xml  strings.xml
libtelldusandroid/: ImageGallery.cpp  androidcomm.cpp  androidcomm.h  libtelldusandroid.pro  main.cpp
qml/tellduscenterlight/: ActionButton.qml  Button.qml  Content.qml  ContentDevice.qml  ContentFavorite.qml  ContentSensor.qml  ContentSetting.qml  Device.js  Device.qml  DeviceElement.qml  DeviceList.js  DeviceListModel.js  DeviceListModel.qml  GroupElement.qml  Header.qml  Menu.qml  Popup.qml  Sensor.qml  SensorElement.qml  SensorListModel.js  SensorListModel.qml  Sensors.js  Separator.qml  Slider.qml  Toolbar.qml  ToolbarButton.qml  main.qml  mainscripts.js
qml/tellduscenterlight/pad/: ConfirmationDialog.qml  CreateGroupMenu.qml  DefaultMenu.qml  DeviceElementPad.qml  DragAction.qml  FavoriteLayout.qml  FavoriteLayoutObjects.qml  GroupAddRemoveMenu.qml  GroupContentMenu.qml  MenuOption.qml  RootPad.qml  TabButton.qml  ToolbarPad.qml  VisualDevice.qml  VisualDeviceList.js  favoritelayoutscripts.js  qmldir
qml/tellduscenterlight/phone/: RootHarmattan.qml  RootPhone.qml  qmldir
qmlapplicationviewer/: qmlapplicationviewer.pri
qt-json/: qt-json.pri
qtc_packaging/debian_fremantle/: README  changelog  control  copyright  rules
qtc_packaging/debian_harmattan/: README  changelog  control  copyright
src/: AbstractNotification.cpp  AbstractNotification.h  AbstractPush.cpp  AbstractPush.h  ColorImageProvider.cpp  ColorImageProvider.h  TdQueue.h  abstractview.cpp  abstractview.h  client.cpp  client.h  clientmodel.cpp  commonview.cpp  commonview.h  config.h.in  device.cpp  device.h  devicemodel.cpp  favoritemodel.cpp  filtereddevicemodel.cpp  filtereddevicemodel.h  groupdevicemodel.cpp  groupdevicemodel.h  main.cpp  resources.qrc  schedulerjob.cpp  schedulerjob.h  schedulermodel.cpp  sensor.cpp  sensor.h  sensormodel.cpp  sensormodel.h  src.pro  swipearea.cpp  swipearea.h  tellduscenter.cpp  tellduscenter.h  tellduscenterlight.desktop  tellduslive.cpp  tellduslive.h  (+7 more)
src/models/: DeviceListSortFilterModel.cpp  DeviceListSortFilterModel.h  DrawerMenuModel.cpp  DrawerMenuModel.h  SchedulerDayModel.cpp  SchedulerDayModel.h  SchedulerDaySortFilterModel.cpp  SchedulerDaySortFilterModel.h  SensorListSortFilterModel.cpp  SensorListSortFilterModel.h  abstractfiltereddevicemodel.cpp  abstractfiltereddevicemodel.h  clientmodel.cpp  clientmodel.h  dashboardmodel.cpp  dashboardmodel.h  devicemodel.cpp  devicemodel.h  favoritedevicemodel.cpp  favoritedevicemodel.h  favoritemodel.h  favoritesensormodel.cpp  favoritesensormodel.h  groupdevicemodel.cpp  schedulermodel.cpp  schedulermodel.h  sensormodel.cpp  sensormodel.h  tlistmodel.cpp  tlistmodel.h
src/objects/: DashboardItem.cpp  DashboardItem.h  DrawerMenuItem.cpp  DrawerMenuItem.h  SchedulerJobInstance.cpp  SchedulerJobInstance.h
src/phone/: BusyIndicator.qml  Button.qml  ButtonSet.qml  ComponentSetBell.qml  ComponentSetLearn.qml  ComponentSetOnOff.qml  ComponentSetUpDown.qml  DB.js  Device.js  DeviceDetails.qml  DevicePage.qml  Footer.qml  Header.qml  HeaderMenu.qml  HeaderMenuItem.qml  LoginNonWebKit.qml  LoginScreen.qml  LoginWebKit.qml  MainInterface.qml  Sensor.js  SensorPage.qml  SensorValue.qml  SettingsPage.qml  TabPage.qml  main.qml
src/properties/: Properties.cpp  Properties.h  PropertiesTheme.cpp  PropertiesTheme.h  PropertiesThemeColors.cpp  PropertiesThemeColors.h  PropertiesThemeCore.cpp  PropertiesThemeCore.h  PropertiesUi.cpp  PropertiesUi.h
src/qml/: ActionButton.qml  Content.qml  ContentDevice.qml  ContentFavorite.qml  ContentSensor.qml  ContentSetting.qml  Device.js  DeviceElement.qml  Menu.qml  SensorElement.qml  Signal.js  Slider.qml  Toolbar.qml  ToolbarButton.qml  main.qml  mainscripts.js
src/qml/pad/: ConfirmationDialog.qml  CreateGroupMenu.qml  DefaultMenu.qml  DeviceElementPad.qml  DragActionImage.qml  FavoriteLayout.qml  FavoriteLayoutObjects.qml  GroupAddRemoveMenu.qml  GroupContentMenu.qml  MenuHeader.qml  MenuOption.qml  MenuSeparator.qml  RootPad.qml  TabButton.qml  ToolbarPad.qml  VisualDeviceList.js
src/qml/phone/: RootHarmattan.qml  RootPhone.qml  qmldir
src/resources/modules/: modules.qrc
src/resources/qml/: AddDevicePage.qml  AddLocationPage.qml  BusyIndicator.qml  Button.qml  ButtonSet.qml  ButtonSetTile.qml  ClientDetails.qml  ComponentSetBell.qml  ComponentSetLearn.qml  ComponentSetOnOff.qml  ComponentSetOnOffTile.qml  ComponentSetUpDown.qml  DashboardPage.qml  DebugPage.qml  DeviceDetails.qml  DevicePage.qml  DrawerChildViewConnectedLocations.qml  Footer.qml  Header.qml  HeaderMenu.qml  HeaderMenuItem.qml  LoginNonWebKit.qml  LoginScreen.qml  LoginWebKit.qml  LoginWebKitWebView.qml  MainInterface.qml  MainInterfaceAndroid.qml  MainInterfaceiOS.qml  MainMenu.qml  OverlayDimmer.qml  PleaseWait.qml  ProgressIndicatorRectangle.qml  SchedulerPage.qml  SensorPage.qml  SensorValue.qml  SensorValueTile.qml  SettingsPage.qml  SwipeArea.qml  TabBar.qml  TabPage.qml  (+4 more)
src/resources/scripts/: Client.js  DB.js  Device.js  Scheduler.js  Sensor.js  progressindicator.js
src/resources/svgts/: addDevice.svgt  addLocation.svgt  arrowDown.svgt  arrowUp.svgt  close.svgt  connectedLocations.svgt  dashboard.svgt  debug.svgt  devices.svgt  favourite.svgt  hamburger.svgt  house.svgt  location.svgt  logout.svgt  refresh.svgt  refreshArrow.svgt  scheduler.svgt  sensors.svgt  settings.svgt  stop.svgt
src/resources/translations/: core_cs.ts  (+18 more)
src/utils/: Logger.cpp  Logger.h  analytics.cpp  analytics.h  dev.cpp  dev.h  errorhandler.h
(+13 files in other folders)
